--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.2.9",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-expo-image-cache": "^4.1.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
