--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.11",
     "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
-    "formik": "^2.2.9",
+    "formik": "^2.4.2",
     "react": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.8",
     "react-native-expo-image-cache": "^4.1.0",
-    "yup": "^1.1.1"
+    "yup": "^1.2.0",
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
