--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "thecleaners",
   "version": "1.0.0",
+  "type": "module",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -14,13 +15,15 @@
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.11",
     "expo-constants": "~14.2.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "express": "^4.18.2",
     "formik": "^2.4.2",
+    "mysql": "^2.18.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-expo-image-cache": "^4.1.0",
-    "yup": "^1.2.0",
-    "expo-image-picker": "~14.1.1"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
