--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "thecleaners",
   "version": "1.0.0",
-  "type": "module",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -13,17 +12,23 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "apisauce": "^3.0.1",
+    "client": "^0.0.1",
     "expo": "~48.0.11",
     "expo-constants": "~14.2.1",
     "expo-image-picker": "~14.1.1",
+    "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "express": "^4.18.2",
     "formik": "^2.4.2",
+    "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "mysql": "^2.18.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-expo-image-cache": "^4.1.0",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
